# PET-CR

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_AND_ANALYSIS_REPORT.md  UNIT_CONVERSION_AUDIT_REPORT.md  VERIFICATION_REPORT.md  setup.py
Zhou_NCC_Code/: .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CN.md  __init__.py  data_generator.py  example_basic.py  pet_estimation.py  requirements.txt
Zhou_NCC_Code/ET projection and attribution/: ET projection and attribution.R
Zhou_NCC_Code/Estimation of PETe and PETa/: .Rhistory  Estimation of PETe and PETa.R
bgcr-budyko/: LICENSE  README.md  pyproject.toml  run_demo.sh
bgcr-budyko/.github/workflows/: ci.yml
bgcr-budyko/bgcr_budyko/io/: io_helpers.py
bgcr-budyko/bgcr_budyko/models/: bgcr.py  penman.py
bgcr-budyko/bgcr_budyko/params/: w_schemes.py
bgcr-budyko/bgcr_budyko/utils/: maths.py
bgcr-budyko/examples/: compare_methods.py  run_synthetic_demo.py
bgcr-budyko/examples/data/: sample_meteo.csv
bgcr-budyko/examples/output/: pet_compare.csv
bgcr-budyko/tests/: test_basic.py  test_bgcr_monthly_basic.py  test_integration_demo.py  test_w_schemes.py
docs/: FILE_STRUCTURE.md
examples/: advanced_analysis.py  calibration_and_uncertainty.py  compare_all_three_methods.py  compare_models.py  example_attribution_analysis.py  example_land_atmosphere.py  example_sigmoid.py  real_data_workflow.py  spatial_bgcr_example.py
petcr/: __init__.py  attribution.py  bgcr_model.py  constants.py  land_atmosphere.py  models.py  physics.py  utils.py
tests/: test_basic.py
(+5 files in other folders)
